added cast as float example

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,31 +318,187 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>productName</th>\n",
-       "      <th>productCode</th>\n",
-       "      <th>avg_price</th>\n",
-       "      <th>max_price</th>\n",
-       "      <th>min_price</th>\n",
+       "      <th>pr</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1992 Ferrari 360 Spider red</td>\n",
-       "      <td>S18_3232</td>\n",
-       "      <td>152.34283</td>\n",
-       "      <td>169.34</td>\n",
-       "      <td>135.47</td>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>95.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>97.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>99.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>99.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>101.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>102.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>104.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>105.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>105.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>105.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>107.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>109.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>110.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>110.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>111.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>112.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>114.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>115.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>115.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>115.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>115.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>116.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>116.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>116.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>117.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>118.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>118.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1996 Moto Guzzi 1100i</td>\n",
+       "      <td>118.94</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   productName productCode  avg_price  max_price  min_price\n",
-       "0  1992 Ferrari 360 Spider red    S18_3232  152.34283     169.34     135.47"
+       "              productName      pr\n",
+       "0   1996 Moto Guzzi 1100i   95.15\n",
+       "1   1996 Moto Guzzi 1100i   97.53\n",
+       "2   1996 Moto Guzzi 1100i   99.91\n",
+       "3   1996 Moto Guzzi 1100i   99.91\n",
+       "4   1996 Moto Guzzi 1100i  101.10\n",
+       "5   1996 Moto Guzzi 1100i  102.29\n",
+       "6   1996 Moto Guzzi 1100i  104.67\n",
+       "7   1996 Moto Guzzi 1100i  105.86\n",
+       "8   1996 Moto Guzzi 1100i  105.86\n",
+       "9   1996 Moto Guzzi 1100i  105.86\n",
+       "10  1996 Moto Guzzi 1100i  107.05\n",
+       "11  1996 Moto Guzzi 1100i  109.42\n",
+       "12  1996 Moto Guzzi 1100i  110.61\n",
+       "13  1996 Moto Guzzi 1100i  110.61\n",
+       "14  1996 Moto Guzzi 1100i  111.80\n",
+       "15  1996 Moto Guzzi 1100i  112.99\n",
+       "16  1996 Moto Guzzi 1100i  114.18\n",
+       "17  1996 Moto Guzzi 1100i  115.37\n",
+       "18  1996 Moto Guzzi 1100i  115.37\n",
+       "19  1996 Moto Guzzi 1100i  115.37\n",
+       "20  1996 Moto Guzzi 1100i  115.37\n",
+       "21  1996 Moto Guzzi 1100i  116.56\n",
+       "22  1996 Moto Guzzi 1100i  116.56\n",
+       "23  1996 Moto Guzzi 1100i  116.56\n",
+       "24  1996 Moto Guzzi 1100i  117.75\n",
+       "25  1996 Moto Guzzi 1100i  118.94\n",
+       "26  1996 Moto Guzzi 1100i  118.94\n",
+       "27  1996 Moto Guzzi 1100i  118.94"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,14 +514,14 @@
     "                        ''', conn)\n",
     "df\n",
     "\n",
-    "# df = pd.read_sql_query('''SELECT p.productName, o.priceEach\n",
-    "#                         FROM products p\n",
-    "#                         JOIN orderDetails o ON p.productCode = o.productCode\n",
-    "#                         WHERE p.productName = '1996 Moto Guzzi 1100i'\n",
-    "#                         order by priceEach\n",
+    "df = pd.read_sql_query('''SELECT p.productName, cast(o.priceEach as float) as pr\n",
+    "                        FROM products p\n",
+    "                        JOIN orderDetails o ON p.productCode = o.productCode\n",
+    "                        WHERE p.productName = '1996 Moto Guzzi 1100i'\n",
+    "                        order by pr\n",
     "                        \n",
-    "#                         ''', conn)\n",
-    "# df"
+    "                        ''', conn)\n",
+    "df"
    ]
   },
   {
